# IDSProject

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: config.json
hashStore/: ubuntu1604.hash  ubuntu2204.hash  ubuntu24.04-clone.hash  ubuntu24.04.hash
src/: Main.qml  main.cpp  mainwindow.cpp  monitorui.cpp  monitorui.h
src/backend/: SqliteHashDB.cpp  SqliteHashDB.h  ids_backend_service.cpp  ids_backend_service.h
src/core/: config.cpp  config.h  logger.h  utils.cpp  utils.h
src/detection/: anomaly.cpp  anomaly.h  intrusionDetector.cpp  intrusionDetector.h  machine_learning.cpp  machine_learning.h  signatures.cpp  signatures.h
src/initializeTest/: initialize.cpp  initialize.h  vm_utils.cpp  vm_utils.h
src/libvmiApi/: libvmiCalls.cpp  libvmiCalls.h
src/monitor/: MonitorThread.cpp  MonitorThread.h  monitor.cpp  monitor.h  process.cpp  process.h  syscalls.cpp  syscalls.h  vmi.cpp  vmi.h
src/monitor/fileMonitor/: fileMonitor.cpp  fileMonitor.h
src/monitor/networkMonitor/: networkMonitor.cpp  networkMonitor.h
src/monitor/processMonitor/: dumpGuestFile.cpp  processMonitor.cpp  processMonitor.h
src/response/: AlertServer.cpp  AlertServer.h  alerting.cpp  alerting.h  mitigation.cpp  mitigation.h
